syntax = "proto3";

package fhers.trbfv;

message Parameters {
    uint32 degree = 1;
    repeated uint64 moduli = 2;
    uint64 plaintext = 3;
}

message TRBFVConfig {
    uint32 n = 1;                    
    uint32 threshold = 2;            
    Parameters params = 3;           
}

message SecretShare {
    repeated SecretShareModulus moduli_shares = 1;
}

message SecretShareModulus {
    repeated uint64 coefficients = 1; 
}

message DecryptionShare {
    bytes poly_data = 1;  
}

message SmudgingData {
    bytes poly_data = 1;
}

message ThresholdDecryptionRequest {
    bytes ciphertext = 1;          
    uint32 party_id = 2;           
    uint64 timestamp = 3;          
}

message ThresholdDecryptionResponse {
    DecryptionShare share = 1;     
    uint32 party_id = 2;           
    bool success = 3;              
    string error_message = 4;      
} 